<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">收租子</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="group">分组</string>
    <string name="all">全部</string>
    <string name="contract">合同</string>
    <string name="renthouse">房租信息</string>
    <string name="rentrecords">收租记录</string>
    <string name="house">房屋信息</string>
    <string name="addhouse">添加房屋</string>
    <string name="adduser">用户注册</string>
    <string name="updateuser">信息修改</string>
    <string name="updatehouse">修改房屋</string>
    <string name="deletehouse">删除房屋</string>
    <string name="addrental">添加房租</string>
    <string name="updaterental">修改房租</string>
    <string name="deleterental">删除房租</string>
    <string name="houseavailable">空置中</string>
    <string name="houserent">租赁中</string>
    <string name="addcontract">添加合同</string>
    <string name="processing">进行中</string>
    <string name="complete">已完成</string>
    <string name="updatecontract">修改合同</string>
    <string name="deletecontract">结束合同</string>
    <string name="backlist">返回列表</string>
    <string name="retental">租金</string>
    <string name="mime">我</string>
    <string name="tv_newfriend">新朋友</string>
    <string name="tv_tongxunlu">通讯录</string>
    <string name="tv_friend">QQ好友</string>
    <string name="house_prompt">请选择项目</string>
    <string name="back">返回</string>
    <string name="add">新增</string>
    <string name="update">修改</string>
    <string name="registerbtn">注册</string>
    <string name="area">小区</string>
    <string name="startdate">开始</string>
    <string name="date">日期</string>
    <string name="enddate">结束</string>
    <string name="rentamount">租金</string>
    <string name="et_account_hint">账号</string>
    <string name="et_password_hint">密码</string>
    <string name="register">新用户</string>
    <string name="login">登入</string>
    <string name="logout">退出登录</string>
    <string name="headlogout">登出</string>
    <string name="setting">设置</string>
    <string name="hello">Hello World, MainActivity!</string>
    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>

</resources>