<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/common_title" >

    <RelativeLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp" >

        <Button
            android:id="@+id/title_btn_left"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@color/common_title"
            android:textColor="@color/whites"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/title_txt"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:textColor="@color/whites"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/title_right_txt"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/add"
            android:textColor="@color/whites"
            android:textSize="20sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/title_btn_right"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@color/common_title"
            android:textColor="@color/whites" 
            android:textSize="20sp"/>

        <LinearLayout
            android:id="@+id/common_constact"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/ll_top_bg"
            android:orientation="horizontal"
            android:visibility="gone" >

            <Button
                android:id="@+id/btn_centerLeft"
                style="@style/top_group"
                android:text="@string/group" />

            <Button
                android:id="@+id/btn_centerRight"
                style="@style/top_all"
                android:text="@string/all" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>