<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/formbg"
    android:orientation="vertical" >

    <com.yy.ui.TitleBarView
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/corners_bg"
        android:orientation="horizontal"
        android:padding="7dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:text="小区"
            android:textSize="18sp"
            android:width="60dp" />

        <ImageView
            android:layout_width="1.0dip"
            android:layout_height="26.0dip"
            android:layout_gravity="center"
            android:background="@drawable/gray_vline" />

        <TextView
            android:id="@+id/tv_house"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/corners_bg"
        android:orientation="horizontal"
        android:padding="7dp" >

        <TextView
            android:id="@+id/tv_project_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:text="租金"
            android:textSize="18sp"
            android:width="60dp" />

        <ImageView
            android:layout_width="1.0dip"
            android:layout_height="26.0dip"
            android:layout_gravity="center"
            android:background="@drawable/gray_vline" />

        <EditText
            android:id="@+id/et_rent_amount"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:background="@drawable/bg_edittext"
            android:ems="10"
            android:paddingLeft="5dp" >
        </EditText>

        <TextView
            android:id="@+id/tv_rent_promot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:text="(2000元,3个月)"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45.0dip"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/corners_bg"
        android:orientation="horizontal"
        android:padding="7dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_project_left"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:text="@string/date"
            android:textSize="18sp"
            android:width="60dp" />

        <ImageView
            android:layout_width="1.0dip"
            android:layout_height="26.0dip"
            android:layout_gravity="center"
            android:background="@drawable/gray_vline" />

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btn_date"
                android:layout_width="fill_parent"
                android:layout_height="46dp"
                android:layout_gravity="center"
                android:layout_marginLeft="12dp"
                android:background="@color/white"
                android:gravity="left|center"
                android:paddingRight="35.0dip" />

            <ImageView style="@style/transfer_info_img" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/corners_bg"
        android:orientation="horizontal"
        android:padding="7dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:text="收租人"
            android:textSize="18sp"
            android:width="60dp" />

        <ImageView
            android:layout_width="1.0dip"
            android:layout_height="26.0dip"
            android:layout_gravity="center"
            android:background="@drawable/gray_vline" />

        <EditText
            android:id="@+id/et_operator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:background="@drawable/bg_edittext"
            android:ems="10"
            android:paddingLeft="5dp" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/corners_bg"
        android:orientation="vertical"
        android:padding="7dp" >

        <TextView
            android:id="@+id/tv_cost_des"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="备注："
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_des"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:background="@drawable/bg_edittext"
            android:ems="10"
            android:gravity="top"
            android:hint="备注"
            android:padding="1dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/progress_loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="18dp"
        android:orientation="vertical"
        android:visibility="gone" >

        <com.yy.util.ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="正在加载。。。"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone" >

        <Button
            android:id="@+id/btn_add"
            style="@style/action_btn"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="6dp"
            android:text="@string/add" />

        <Button
            android:id="@+id/btn_delete"
            style="@style/action_btn"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="6dp"
            android:text="@string/back" />
    </LinearLayout>

</LinearLayout>